--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,4 +1,15 @@
 <%= form_for @link, :html => { :class => 'form-horizontal' } do |f| %>
+  <% if @link.errors.any? %>
+    <div class="error_messages">
+      <h3>Form is invalid</h3>
+      <ul>
+        <% for message in @link.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="control-group">
     <%= f.label :url, :class => 'control-label' %>
     <div class="controls">
@@ -6,15 +17,16 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :body, :class => 'control-label' %>
+    <%= f.label :title, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :body, :class => 'text_area' %>
+      <%= f.text_field :title, :class => 'text_field' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :user_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.number_field :user_id, :class => 'number_field' %>
+      <%= f.number_field :user_id, :class => 'number_field', :readonly => "readonly",
+          :value => @user.id %>
     </div>
   </div>
 
