Add voting priviledges, Vote controller attributes and displays.

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -6,7 +6,9 @@
 <table class="table table-striped">
   <tbody>
     <tr>
-      <td>Upvote</td>
+      <td><%= link_to "<i class=\"icon-thumbs-up\"></i>".html_safe,
+              link_votes_path(@link),
+              :method => :post %></td>
       <td><%= link_to @link.title, @link.url %></td>
       <td><%= @link.user.username %></td>
       <td><%= time_ago_in_words(@link.created_at) %> ago</td>
@@ -15,7 +17,9 @@
   </tbody>
 </table>
 
-<%= render 'form' %>
+<% if session[:user_id] %>
+  <%= render 'form' %>
+<% end %>
 
 <% if @comments %>
   <table class="table table-striped">
@@ -25,10 +29,12 @@
           <td>
 
               <small>
-              <div class="span2"><%= "by #{comment.user.username} | #{time_ago_in_words(comment.created_at)}" %> ago<br /></div>
+                <div class="span2">
+                  <%= "by #{comment.user.username} | #{time_ago_in_words(comment.created_at)}" %> ago<br />
+                </div>
               </small>
               <div class="span5"><%= comment.body %></div>
-              <% if session[:user_id] == comment.user.id %>
+              <% if session[:user_id] == comment.user.id and comment.editable? %>
                 <small>
                   <%= link_to "Edit", edit_link_comment_path(@link, comment),
                               :class => "span1" %>
