--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -16,23 +16,10 @@
       <%= f.text_area :body, :class => 'text_area span4', :rows => 10 %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :user_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :user_id, :class => 'number_field', :readonly => "readonly",
-          :value => @link.user.id %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :link_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :link_id, :class => 'number_field', :readonly => "readonly",
-          :value => @link.id %>
-    </div>
-  </div>
-
 
   <div class="form-actions">
+    <%= f.hidden_field :user_id, :value => session[:user_id] %>
+    <%= f.hidden_field :link_id, :value => @link.id %>
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 links_path, :class => 'btn' %>
