--- a/app/views/links/new.html.erb
+++ b/app/views/links/new.html.erb
@@ -1,6 +1,5 @@
 <%- model_class = Link -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
-                                 :default => "New #{model_class.model_name.human}") %></h1>
+  <h2>Submit Something Cool</h2>
 </div>
 <%= render :partial => 'form' %>
