--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -6,7 +6,7 @@
 <table class="table table-striped">
   <tbody>
     <tr>
-      <td><%= link_to "<i class=\"icon-thumbs-up\"></i>".html_safe,
+      <td><%= link_to_if @link.votable?(session[:user_id]), "<i class=\"icon-thumbs-up\"></i>".html_safe,
               link_votes_path(@link),
               :method => :post %></td>
       <td><%= @link.points %> pts</td>
