--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -14,7 +14,7 @@
     <% @links.each_with_index do |link, index| %>
       <tr>
         <td><small><%= index + 1 %></small></td>
-        <td><small><%= link_to "<i class=\"icon-thumbs-up\"></i>".html_safe,
+        <td><small><%= link_to_if link.votable?(session[:user_id]), "<i class=\"icon-thumbs-up\"></i>".html_safe,
                 link_votes_path(link),
                 :method => :post %></small></td>
         <td><div class="span1">
