--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -20,6 +20,9 @@
   <div class="form-actions">
     <%= f.hidden_field :user_id, :value => session[:user_id] %>
     <%= f.hidden_field :link_id, :value => @link.id %>
+    <% if @parent_comment %>
+      <%= f.hidden_field :parent_id, :value => @parent_comment.id %>
+    <% end %>
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 links_path, :class => 'btn' %>
