--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -27,7 +27,7 @@
         <td><div class="span1">
                 <small><%= link.points %> pts</small></div></td>
         <td><div class="span5"><%= link_to link.title, link.url %></td>
-        <td><small><%= link.user.username %></small></div></td>
+        <td><small><%= "#{link.user.username} (karma: #{link.user.karma})" %></small></div></td>
         <td><div class="span1"><small><%= time_ago_in_words(link.created_at) %> ago</small></div></td>
         <td>
           <div class="span1">
