--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,60 @@
 @import "twitter/bootstrap/bootstrap";
-body { padding-top: 60px; }
+body { 
+	padding-top: 60px; 
+}
 @import "twitter/bootstrap/responsive";
+
+.nested-comment{
+	margin-left: 75px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+}
+
+.comment{
+	padding-left: 15px;
+	margin: 15px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	background-color: #CCFFCC;
+}
+
+.right{
+	float: right;
+}
+
+.indent {
+	margin-left: 2em;
+}
+
+.data-link {
+	padding: 15px;
+	margin: 10px;
+	background-color: #CCFFCC;
+}
+.center {
+	text-align: center;
+}
+
+.spread-word {
+	margin: 10px;
+	word-spacing: 10px;
+}
+
+a {
+	color: #777;
+}
+
+.form-actions {
+	background-color: #CCFFCC;
+}
+
+.navbar-inner {
+	background-color: #CCFFCC;
+}
+
+
+
+
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
