--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,56 +1,75 @@
 <%- model_class = Link -%>
-<div class="page-header">
-  <h2>Awesome Links!</h2>
-</div>
 
-<p>
-  <%= link_to "top", {:controller => "links", :action => "index", :order_by => "points"} %>
-  &nbsp;
-  <%= link_to "new", {:controller => "links", :action => "index", :order_by => "created_at"} %>
-</p>
+<!-- <div class="sort_links">
+  <p> 
+    <%= "sort by:  " %>
+    <span class="spread-word">
+    <%= link_to "popular", {:controller => "links", :action => "index", :order_by => "points"} %>
+    <%= " | " %>
+    <%= link_to "recent", {:controller => "links", :action => "index", :order_by => "created_at"} %>
+  </span>
+  </p>
+</div> -->
+  <%= render 'layouts/sort_links' %>
 
-<table class="table table-striped">
-  <tbody>
-    <% @links.each_with_index do |link, index| %>
-      <tr>
-        <td><small><%= index + 1 %></small></td>
-        <td><small><%= link_to_if link.link_votable?(session[:user_id]), "<i class=\"icon-thumbs-up\"></i>".html_safe,
-                #link_votes_path(link.id),
+ 
+  <% @links.each_with_index do |link, index| %>
+    <div class="data-link">
+      <p>
+        <span class="spread-word">
+          <%= "#{index + 1}." %>
+          <%= link_to_if link.link_votable?(session[:user_id]), "<i class=\"icon-thumbs-up\"></i>".html_safe,
+                object_votes_path(link), :method => :post %>
+        </span>
 
+        <%= link_to link.title, link.url %>
 
-
-                object_votes_path(link),
-
-
-
-                :method => :post %></small></td>
-        <td><div class="span1">
-                <small><%= link.points %> pts</small></div></td>
-        <td><div class="span5"><%= link_to link.title, link.url %></td>
-        <td><small><%= "#{link.user.username} (karma: #{link.user.karma})" %></small></div></td>
-        <td><div class="span1"><small><%= time_ago_in_words(link.created_at) %> ago</small></div></td>
-        <td>
-          <div class="span1">
-            <small><%= link_to "#{link.comment_count} comments", link_comments_path(link) %></small>
-          </div>
-        </td>
-        <% if session[:user_id] == link.user.id %>
-          <td>
-            <div class="span1">
-              <%= link_to "<i class=\"icon-pencil\"></i>".html_safe,
-                      edit_link_path(link.id), :class => 'btn btn-mini' %>
-              <%= link_to "<i class=\"icon-remove\"></i>".html_safe,
-                      link_path(link),
+        <% if session[:user_id] == link.user.id %>  
+            <span class="spread-word">
+              |
+              <%= link_to "edit", edit_link_path(link.id) %>
+              |
+              <%= link_to "delete", link_path(link),
                       :method => :delete,
                       :data => { :confirm => t('.confirm',
-                                 :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-            </div>
-          </td>
+                                 :default => t("helpers.links.confirm", :default => 'Are you sure?')) } %>
+            </span>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      </p>
+      <div class="indent">
+        <p>
+            <%= link.points %> pts.
+          <span class="spread-word">            
+            <%= " | " %>
+          </span>
+            <%="by: #{link.user.username} " %>
+          <span class="spread-word">            
+            <%= " | " %>
+          </span>
+            <%= "#{time_ago_in_words(link.created_at)} ago" %>
+          <span class="spread-word">            
+            <%= " | " %>
+          </span> 
+            <%= link_to "#{link.comment_count} comments", link_comments_path(link) %>
+        </p>
+
+  <!--         <% if session[:user_id] == link.user.id %>
+                <%= link_to "<i class=\"icon-pencil\"></i>".html_safe,
+                        edit_link_path(link.id), :class => 'btn btn-mini' %>
+                <%= link_to "<i class=\"icon-remove\"></i>".html_safe,
+                        link_path(link),
+                        :method => :delete,
+                        :data => { :confirm => t('.confirm',
+                                   :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                        :class => 'btn btn-mini btn-danger' %>
+          <% end %>
+   -->  
+        </p>
+
+      </div>
+    </div>
+  <% end %>
+
+
 
 <%= paginate @links %>
