--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,11 +5,15 @@
 
 
 <p>
+
   <span class="spread-word">
-    <%= link_to_if @link.link_votable?(session[:user_id]),"<i class=\"icon-thumbs-up\"></i>".html_safe,
+    <%= link_to_if votable?(@link),"<i class=\"icon-thumbs-up\"></i>".html_safe,
       object_votes_path(@link),
       :method => :post %>
   </span>
+
+
+
   <%= link_to @link.title, @link.url %>
 </p>
 
@@ -42,7 +46,7 @@
         <div class="nested-comment">
           <p>
             <span class="spread-word">
-            <%= link_to_if child_comment.comment_votable?(session[:user_id]), "<i class=\"icon-thumbs-up\"></i>".html_safe,object_votes_path(child_comment), :method => :post %>
+            <%= link_to_if votable?(child_comment), "<i class=\"icon-thumbs-up\"></i>".html_safe,object_votes_path(child_comment), :method => :post %>
             </span>
             <%= "by #{child_comment.user.username}" %>
             <span class="spread-word">
@@ -64,7 +68,7 @@
       <div class="comment">
         <p>
           <span class="spread-word">
-          <%= link_to_if comment.comment_votable?(session[:user_id]),
+          <%= link_to_if votable?(comment),
                      "<i class=\"icon-thumbs-up\"></i>".html_safe, object_votes_path(comment),
                      :method => :post %>
           </span>
