--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -18,7 +18,7 @@
       <p>
         <span class="spread-word">
           <%= "#{index + 1}." %>
-          <%= link_to_if link.link_votable?(session[:user_id]), "<i class=\"icon-thumbs-up\"></i>".html_safe,
+          <%= link_to_if votable?(link), "<i class=\"icon-thumbs-up\"></i>".html_safe,
                 object_votes_path(link), :method => :post %>
         </span>
 
