--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="form-actions">
     <%= f.hidden_field :user_id, :value => @user.id %>
-    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= f.submit nil, :class => 'btn' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
                 links_path, :class => 'btn' %>
   </div>
