--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -18,8 +18,10 @@
       <p>
         <span class="spread-word">
           <%= "#{index + 1}." %>
-          <%= link_to_if votable?(link), "<i class=\"icon-thumbs-up\"></i>".html_safe,
-                object_votes_path(link), :method => :post %>
+          <% if @current_user %>
+            <%= link_to_if votable?(link), "<i class=\"icon-thumbs-up\"></i>".html_safe,
+                  object_votes_path(link), :method => :post %>
+          <% end %>
         </span>
 
         <%= link_to link.title, link.url %>
@@ -38,7 +40,7 @@
       </p>
       <div class="indent">
         <p>
-            <%= link.points %> pts.
+            <%= pluralize(link.points, 'pt') %>
           <span class="spread-word">            
             <%= " | " %>
           </span>
