deleted extra migration. slight styling modifications.

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -40,7 +40,7 @@
       </p>
       <div class="indent">
         <p>
-            <%= pluralize(link.points, 'pt') %>
+            <%= pluralize(link.vote_count, 'pt') %>
           <span class="spread-word">            
             <%= " | " %>
           </span>
