--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -18,7 +18,7 @@
 </p>
 
 <p class="indent">
-    <%= pluralize(@link.points, 'pt') %> 
+    <%= pluralize(@link.vote_count, 'pt') %> 
   <span class="spread-word">            
     <%= " | " %>
   </span>
