--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -10,14 +10,22 @@
   </span>
   </p>
 </div> -->
-  <%= render 'layouts/sort_links' %>
-
+  <div class="sort_links">
+    <p> 
+      <%= "sort by:  " %>
+      <span class="spread-word">
+      <%= link_to "popular", {:controller => "links", :action => "index", :order_by => "points"} %>
+      <%= " | " %>
+      <%= link_to "recent", {:controller => "links", :action => "index", :order_by => "created_at"} %>
+    </span>
+    </p>
+  </div>
  
   <% @links.each_with_index do |link, index| %>
     <div class="data-link">
       <p>
         <span class="spread-word">
-          <%= "#{index + 1}." %>
+          <%= "#{index + 1 + @page_offset}." %>
           <% if @current_user %>
             <%= link_to_if votable?(link), "<i class=\"icon-thumbs-up\"></i>".html_safe,
                   object_votes_path(link), :method => :post %>
